--- a/admin.html
+++ b/admin.html
@@ -2,8 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>PRISM – Data Input</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>PRISM Dashboard</title>
   <link rel="stylesheet" href="styles.css" />
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  
 </head>
 <body>
 
@@ -11,117 +14,109 @@
   <aside class="sidebar">
     <h2>PRISM</h2>
     <nav>
-      <a href="index.html">Dashboard</a>
-      <a href="admin.html" class="active">Admin</a>
-      <a href="alerts.html">Alerts</a>
-      <a href="settings.html">Settings</a>
+    <a href="index.html">Dashboard</a>
+    <a href="Admin.html">Admin</a>
+    <a href="alerts.html">Alerts</a>
+    <a href="settings.html">Settings</a>
     </nav>
   </aside>
 
-  <!-- MAIN CONTENT -->
+  <!-- Main Content -->
   <div class="layout">
 
-    <!-- Page Header -->
+    <!-- Top Bar -->
     <header class="topbar">
-      <h1>Case Review Overview</h1>
+      <h1>Dashboard Overview</h1>
       <div class="theme-controls">
         <button class="theme-toggle-btn active" id="darkModeBtn" onclick="setTheme('dark')">🌙</button>
         <button class="theme-toggle-btn" id="lightModeBtn" onclick="setTheme('light')">☀️</button>
       </div>
     </header>
 
-    <!-- Review Cards (CORRECT LOCATION) -->
-    <section class="cards review-cards">
-      <div class="card warning">
-        <h3>Pending Review Cases</h3>
-        <p id="pending-review-count">0</p>
-      </div>
 
-      <div class="card alert">
-        <h3>Confirmed Fraud Cases</h3>
-        <p id="confirmed-fraud-count">0</p>
-      </div>
+    <!-- KPI Cards -->
+<section class="cards">
+  <div class="card">
+    <h3>Total Transfers</h3>
+    <p id="kpi-transfers">0</p>
+  </div>
 
-      <div class="card success">
-        <h3>Rejected Fraud Cases</h3>
-        <p id="rejected-fraud-count">0</p>
+  <div class="card alert">
+    <h3>Abnormal Transfers</h3>
+    <p id="kpi-abnormal">0</p>
+  </div>
+
+  <div class="card warning">
+    <h3>Pending Actions</h3>
+    <p id="kpi-pending">0</p>
+  </div>
+
+  <div class="card success">
+    <h3>Resolved Cases</h3>
+    <p id="kpi-resolved">0</p>
+  </div>
+  
+</section>
+
+<!-- Activity Table - REQUIRED for ui.js -->
+
+
+    <!-- Graph Placeholder -->
+     <!-- Graph Placeholder -->
+    <section class="panel graph-panel">
+      <h2>Transfer Analytics</h2>
+      <div class="graph-container">
+        <canvas id="analyticsChart"></canvas>
       </div>
     </section>
 
-  <div class="layout">
 
-     <!-- ================= PENDING CASES ================= -->
-    <section class="panel">
-      <h2>Pending Review Cases</h2>
+    <!-- Main Grid -->
+    <section class="grid">
 
-      <table>
-        <thead>
-          <tr>
-            <th>Tender ID</th>
-            <th>Tender Value</th>
-            <th>No. of Tenderers</th>
-            <th>Status</th>
-            <th>Action</th>
-          </tr>
-        </thead>
-        <tbody id="pendingCasesTable">
-          <!-- JS will populate -->
-        </tbody>
-      </table>
-    </section>
+      <!-- Activity Table -->
+      <div class="panel">
+        <h2>Recent Transfer Activity</h2>
+        <table id="activityTable">
+          <thead>
+            <tr>
+              <th>Tender ID</th>
+              <th>Tender Value</th>
+              <th>No. of Tenderers</th>
+              <th>Status</th>
+              
+            </tr>
+          </thead>
+          <tbody></tbody>
+        </table>
+      </div>
 
-    <!-- ================= CONFIRMED CASES ================= -->
-    <section class="panel" style="margin-top: 2rem;">
-      <h2>Confirmed Fraud Cases</h2>
+      <!-- Notifications -->
+      <div class="panel">
+        <h2>System Alerts</h2>
+        <ul class="alerts">
+          <li class="high">High-value transfer flagged</li>
+          <li class="medium">Manual review pending</li>
+          <li class="low">Daily scan completed</li>
+        </ul>
+      </div>
 
-      <table>
-        <thead>
-          <tr>
-            <th>Tender ID</th>
-            <th>Tender Value</th>
-            <th>No. of Tenderers</th>
-            <th>Status</th>
-          </tr>
-        </thead>
-        <tbody id="approvedCasesTable">
-          <!-- JS will populate -->
-        </tbody>
-      </table>
-    </section>
-
-    <!-- ================= REJECTED CASES ================= -->
-    <section class="panel" style="margin-top: 2rem;">
-      <h2>Rejected Fraud Cases</h2>
-
-      <table>
-        <thead>
-          <tr>
-            <th>Tender ID</th>
-            <th>Tender Value</th>
-            <th>No. of Tenderers</th>
-            <th>Status</th>
-          </tr>
-        </thead>
-        <tbody id="rejectedCasesTable">
-          <!-- JS will populate -->
-        </tbody>
-      </table>
     </section>
 
     <!-- Footer -->
     <footer>
-      PRISM Case Management • <span id="caseCount">0</span> Total Cases
+      PRISM Monitoring System • UI Prototype
     </footer>
 
   </div>
 
+  <script src="config.js"></script>
   <script src="ui.js"></script>
-  <script src="admin.js"></script>
   <script>
-    document.addEventListener("DOMContentLoaded", function() {
-      console.log("Admin page init...");
-      initializeTheme();
-    });
-  </script>
+  document.addEventListener("DOMContentLoaded", () => {
+    initializeTheme(); // From ui.js
+    fetchDashboardData().then(data => renderDashboard(data));
+  });
+</script>
 </body>
 </html>
